Added projects to work page

--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "Respoonsive Portfolio Site",
   "main": "index.js",
+  "homepages": "https://amosda4183.github.io/personal-portfolio",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/scss/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/scss/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "author": "David Amos",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.9.3"
   }
 }
